starts a class to managed test state

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
-set(tutorials tutorials/1_hello_world.cmake
+set(tutorials #tutorials/1_hello_world.cmake
               #tutorials/2_sections.cmake
+              test_state.cmake
 )
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
