--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ cmake-build-debug/
 
 #Auto-generated directories
 docs/source/api
+docs/source/tutorials
+!docs/source/tutorials/index.*
 
 #CLion project settings
 .idea/
