sections works (although the asserts aren't enforced)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(tutorials tutorials/1_hello_world.cmake
-              #tutorials/2_sections.cmake
+              tutorials/2_sections.cmake
               test_state.cmake
 )
 
