--- a/tests/detail_/utilities/CMakeLists.txt
+++ b/tests/detail_/utilities/CMakeLists.txt
@@ -1,1 +1,6 @@
-add_cmake_test_test(sanitize_name)
+add_cmake_test_test(lc_find
+                    print_result
+                    repeat_string
+                    return
+                    sanitize_name
+)
