lots more unit tests

--- a/tests/detail_/utilities/CMakeLists.txt
+++ b/tests/detail_/utilities/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_cmake_test_test(lc_find
+add_cmake_test_test(input_check
+                    lc_find
                     print_result
                     repeat_string
                     return
