--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ cmake-build-debug/
 
 #Auto-generated directories
 docs/source/api
-docs/source/tutorials
-!docs/source/tutorials/index.*
+docs/source/tutorials/*.rst
+!docs/source/tutorials/index.rst
 
 #CLion project settings
 .idea/
