--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - releases=(3.10.3 3.11.4 3.12.4 3.13.5 3.14.6 3.15.2)
   - mkdir ${bin_dir} && cd ${bin_dir}
   - |
-    for i in {0..${#versions[@]}}; do
+    for i in {0..${#versions[\@]}}; do
         veri=${versions[${i}]}
         reli=${releases[${i}]}
         wget https://cmake.org/files/v${veri}/cmake-${reli}-Linux-x86_64.tar.gz
