--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,13 @@ compiler:
   - gcc
 
 install:
-  - bin_dir="${TRAVIS_BUILD_DIR}/cmake_install"
-  - versions=(3.10 3.11 3.12 3.13 3.14 3.15)
-  - releases=(3.10.3 3.11.4 3.12.4 3.13.5 3.14.6 3.15.2)
+  - bin_dir="${TRAVIS_BUILD_DIR}/cmake_${CMAKE_VER}"
   - mkdir ${bin_dir} && cd ${bin_dir}
-  - |
-    for ((i=0;i<${\#versions[\@]};i++)); do
-        veri=${versions[${i}]}
-        reli=${releases[${i}]}
-        wget https://cmake.org/files/v${veri}/cmake-${reli}-Linux-x86_64.tar.gz
-        tar -xvf cmake-${reli}-Linux-x86_64.tar.gz > /dev/null
-        mv cmake-${reli}-Linux-x86_64/ cmake-${veri}
-    done
+  - veri=${CMAKE_VER}
+  - reli=${veri}.1
+  - wget https://cmake.org/files/v${veri}/cmake-${reli}-Linux-x86_64.tar.gz
+  - tar -xvf cmake-${reli}.1-Linux-x86_64.tar.gz > /dev/null
+  - mv cmake-${reli}-Linux-x86_64/ cmake-${veri}
   - cd ${TRAVIS_BUILD_DIR}
 
 env:
