--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - master
 jobs:
   unit_test:
-    runs-on: ubuntu-latest
+    runs-on: ubunt-latest
     steps:
       - uses: actions/checkout@v1
       - name: get-cmake
@@ -18,11 +18,11 @@ jobs:
           wget "${url_prefix}/v${version}/cmake-${version}-Linux-x86_64.sh"
           yes | /bin/sh "cmake-${version}-Linux-x86_64.sh"
       - name: unit_test
-        run: >
-          cmake-3.16.3-Linux-x86_64/bin/ctest
+        run: |
+          'cmake-3.16.3-Linux-x86_64/bin/ctest
             --build-and-test . build
             --build-generator "Unix Makefiles"
-            --build-options BUILD_TESTING=TRUE
+            --build-options BUILD_TESTING=TRUE'
 
 
 #  docs:
