--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,8 @@ jobs:
           yes | /bin/sh "cmake-${version}-Linux-x86_64.sh"
       - name: unit_test
         run: |
-          'cmake-3.16.3-Linux-x86_64/bin/ctest
-           --build-and-test . build
-           --build-generator "Unix Makefiles"
-           --build-options BUILD_TESTING=TRUE'
+          ls
+          cmake-3.16.3-Linux-x86_64/bin/ctest --build-and-test . build --build-generator "Unix Makefiles" --build-options BUILD_TESTING=TRUE'
 
 
 #  docs:
