--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: unit_test
         run: |
           ls
-          cmake-3.16.3-Linux-x86_64/bin/ctest --build-and-test . build --build-generator "Unix Makefiles" --build-options BUILD_TESTING=TRUE'
+          cmake-3.16.3-Linux-x86_64/bin/ctest --build-and-test . build --build-generator "Unix Makefiles" --build-options BUILD_TESTING=TRUE
 
 
 #  docs:
