--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,12 @@ jobs:
           url_prefix=https://github.com/Kitware/CMake/releases/download
           wget "${url_prefix}/v${version}/cmake-${version}-Linux-x86_64.sh"
           yes | /bin/sh "cmake-${version}-Linux-x86_64.sh"
+      - name: configure
+        run: |
+          cmake-3.16.3-Linux-x86_64/bin/cmake -H. -Bbuild -DBUILD_TESTING=ON
       - name: unit_test
         run: |
-          ls
-          cmake-3.16.3-Linux-x86_64/bin/ctest --build-and-test . build --build-generator "Unix Makefiles" --build-options BUILD_TESTING=TRUE
+          cmake-3.16.3-Linux-x86_64/bin/ctest  -j 2 --output-on-failure
 
 
 #  docs:
