--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        cmake: [3.16.3]
+        cmake: [3.14.7, 3.15.5, 3.16.3]
     env:
       cmake_version: ${{ matrix.cmake }}
       os: Linux-x86_64
