Ignore future pycaches

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ docs/source/api
 docs/source/tutorials/*.rst
 docs/source/make_tutorials.py
 !docs/source/tutorials/index.rst
+__pycache__/
 
 #CLion project settings
 .idea/
