--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.14) #Required for FetchContent_MakeAvailable()
 project(CMakeTest LANGUAGES C) #Need C language so CMake doesn't complain about no linker language for some empty files used for tests
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../")
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" CACHE STRING "" FORCE)
-cmake_policy(SET CMP0002 OLD) #Allow duplicate targets by overriding, needed for multiple tests that work with the same target
+
 
 #Enable colors in Unix environments, ignored on Windows. Will not work with pipes
 set(CMAKETEST_USE_COLORS "True")
@@ -13,16 +13,27 @@ include("${PROJECT_SOURCE_DIR}/../cmake/get_cpp.cmake")
 
 function(add_cmake_test_test)
     foreach(testi ${ARGN})
-        include(${CMAKE_CURRENT_LIST_DIR}/${testi}.cmake)
+        #include(${CMAKE_CURRENT_LIST_DIR}/${testi}.cmake)
+        configure_file("${PROJECT_SOURCE_DIR}/../tests/template_lists.txt" "${CMAKE_CURRENT_BINARY_DIR}/tests/${testi}/src/CMakeLists.txt" @ONLY)
+        add_test(
+        NAME
+            ${testi}
+        COMMAND
+            "${CMAKE_CTEST_COMMAND}"
+                --build-and-test "${CMAKE_CURRENT_BINARY_DIR}/tests/${testi}/src"
+                                 "${CMAKE_CURRENT_BINARY_DIR}/tests/${testi}"
+                --build-generator "${CMAKE_GENERATOR}"
+                --test-command "${CMAKE_CTEST_COMMAND}"
+        )
     endforeach()
 endfunction()
 
 add_subdirectory(asserts)
 #add_subdirectory(detail_)
 #add_subdirectory(tutorials)
-ct_exec_tests()
-cpp_get_global(did_tests_pass "CMAKETEST_TESTS_DID_PASS")
+#ct_exec_tests()
+#cpp_get_global(did_tests_pass "CMAKETEST_TESTS_DID_PASS")
 
-if(NOT did_tests_pass)
-    ct_exit("Testing of CMakeTest failed")
-endif()
+#if(NOT did_tests_pass)
+#    ct_exit("Testing of CMakeTest failed")
+#endif()
