Remove need for parsing and speed up testing (#13)
* Convert main script to CTest, remove need for parsing

* Replace subprocesses with exceptions, add color output

* Remove unneeded files, clean up terminal output, fetch cpp only when needed

* Fix foreach loops

* Remove unnecessary commented code in CMakeLists.txt and main.sh

* Remove hardcoded example test in CMakeLists.txt

* Convert assertion failures from fatal_errors to exceptions of the ASSERTION_FAILED type

* Remove Pycache

* Ignore future pycaches

* Remove generated documentation and unneeded main.sh

* Split add_test file into one file for every function

* Rename all prefixes from CMAKE_* to CMAKETEST_*, add CT_* prefix to colors

* Change macro variables to snake case with prefix

* Replace raw global properties with cpp globals, random string ID with cpp_unique_id

* Add comment for minimum cmake version, fix colors flag

* Rename all local variables to prefix and snake case, add global test failure state to exec_sections

* Reformat add_section docstring

* Fix #9, update ct_add_test() documentation

* Add section depth tracking

* Rewrite assert tests for new framework

* Move test execution from configure step to test step

* Move section execution to add_section() so scope rules are respected in tests

* Update documentation

* Fix assertions causing errors

* Update documentation on new assertion and exception behavior

* Add ct_exit() on EXPECTFAIL tests/sections not failing

* Update documentation concerning EXPECTFAIL tests/sections not failing causing halt

* Remove unneeded function in cmake_test/detail_/utilities/input_check.cmake

* Remove unneeded tests, begin converting remaining detail_ tests to new framework

* Split each test file into separate CTest test/process

* Begin migrating add_dir to cmake_test from tests

* Finish migrating add_dir to cmake_tests from tests/CMakeLists.txt

* Centralize minimum cmake version

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 #Build directories
 docs/build
 cmake-build*/
+build/
 
 #Auto-generated directories
 docs/source/api
 docs/source/tutorials/*.rst
 docs/source/make_tutorials.py
 !docs/source/tutorials/index.rst
+__pycache__/
 
 #CLion project settings
 .idea/
