Add CMinx autodocs (#19)
* Add CMinx autodocs

* Register exception handler before pulling cminx, instead of after

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(CMakeTest VERSION 1.0.0 LANGUAGES NONE)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" CACHE STRING "" FORCE)
+option(BUILD_DOCS "Whether documentation targets should be added" OFF)
 include("${PROJECT_SOURCE_DIR}/cmake/get_cpp.cmake")
 include(cmake_test/cmake_test)
 
@@ -15,6 +16,18 @@ if("${BUILD_TESTING}")
 
 endif()
 
+if(BUILD_DOCS)
+    ct_register_exception_handler() #Catch any exceptions while building docs
+
+    include("${PROJECT_SOURCE_DIR}/cmake/get_cminx.cmake")
+    include(cminx)
+
+
+
+    cminx_gen_rst("${CMAKE_CURRENT_SOURCE_DIR}/cmake_test/" "${CMAKE_CURRENT_SOURCE_DIR}/docs/source/developer/")
+
+    cminx_add_docs_target("${CMAKE_CURRENT_SOURCE_DIR}/docs" "${CMAKE_CURRENT_BINARY_DIR}/docs" html)
+endif()
 
 #----------------------------------#
 # Example on how to execute a test #
