--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,17 @@ set(_ct_min_cmake_version "3.14")
 cmake_minimum_required(VERSION "${_ct_min_cmake_version}") #Required for FetchContent_MakeAvailable()
 project(CMakeTest VERSION 1.0.0 LANGUAGES NONE)
 
+if(NOT CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+	set(_ct_min_cmake_version "${_ct_min_cmake_version}" PARENT_SCOPE) #Make sure projects using CMakeTest have this variable
+endif()
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" CACHE STRING "" FORCE)
+if(NOT CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+        set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE) #For projects including CMakeTest
+endif()
+
+
 option(BUILD_DOCS "Whether documentation targets should be added" OFF)
 include("${PROJECT_SOURCE_DIR}/cmake/get_cpp.cmake")
 include(cmake_test/cmake_test)
