Add tests for ct_add_dir test disambiguation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,3 +11,4 @@ set(CT_DEFAULT_PRINT_LENGTH 80 CACHE STRING "The default print length for pass/f
 ct_set_print_length("${CT_DEFAULT_PRINT_LENGTH}")
 
 ct_add_dir(".")
+ct_add_dir("../test_directory_2")
