--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ docs/source/make_tutorials.py
 !docs/source/tutorials/index.rst
 __pycache__/
 
-#CLion project settings
+#IDE project settings
 .idea/
+settings.json
