Update get_cmaize.cmake (#98)
* Update get_cmaize.cmake

Fixes #97

* versions CMakePPLang too

* bump minimum CMake version

* address Zach's comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,29 @@
-set(_ct_min_cmake_version "3.14" CACHE INTERNAL "")
-cmake_minimum_required(VERSION "${_ct_min_cmake_version}") #Required for FetchContent_MakeAvailable()
+#3.19 needed because of CMaize
+set(_ct_min_cmake_version "3.19" CACHE INTERNAL "")
+cmake_minimum_required(VERSION "${_ct_min_cmake_version}")
 project(CMakeTest VERSION 1.0.0 LANGUAGES NONE)
 
 if(NOT CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-	set(_ct_min_cmake_version "${_ct_min_cmake_version}" PARENT_SCOPE) #Make sure projects using CMakeTest have this variable
+    #Make sure projects using CMakeTest have this variable
+    set(_ct_min_cmake_version "${_ct_min_cmake_version}" PARENT_SCOPE)
 endif()
 
+# Add cmake directory to CMake's module path, iff it's not already there
 list(FIND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" path_has_cmake)
 if(${path_has_cmake} STREQUAL "-1")
     list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 endif()
+
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" CACHE STRING "" FORCE)
+
+# Make sure projects including CMakeTest can find it too
 if(NOT CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE) #For projects including CMakeTest
+    set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)
 endif()
 
-include("${PROJECT_SOURCE_DIR}/cmake/get_cmaize.cmake")
+
+include(get_cmakepp_lang)
+include(get_cmaize)
 include(cmake_test/cmake_test)
 
 if("${BUILD_TESTING}")
