--- a/cmake/cmake_test/templates/test_project_CMakeLists.txt.in
+++ b/cmake/cmake_test/templates/test_project_CMakeLists.txt.in
@@ -2,11 +2,12 @@
 #The configured file will be used as the CTest entrypoint and will
 #include() the intended test file before executing the tests found.
 
-
 cmake_minimum_required(VERSION @_ct_min_cmake_version@) #Required for FetchContent_MakeAvailable()
 set(_ct_min_cmake_version @_ct_min_cmake_version@) #Propagate min version down
-project(@_ad_test_file@ LANGUAGES C) #Needed so dummy libraries don't complain about not having a linkage language
 
+# A language is set so the dummy projects don't complain about not having a
+# linkage language.
+project(@_CT_LISTS_TEMPLATE_PROJECT_NAME@ LANGUAGES C)
 
 #Enable colors in Unix environments, ignored on Windows. Will not work with pipes
 set(CMAKETEST_USE_COLORS "@CMAKETEST_USE_COLORS@")
@@ -16,9 +17,12 @@ if(NOT CT_PRINT_LENGTH GREATER 0)
     set(CT_PRINT_LENGTH "@CT_PRINT_LENGTH@")
 endif()
 
-set(CMAKE_MODULE_PATH "@CMAKE_MODULE_PATH@" CACHE STRING "" FORCE)
-
-
+# Propagate the module CMake module path for the project so they stick when
+# the tests are run separately
+set(CMAKE_MODULE_PATH
+    "@CMAKE_MODULE_PATH@"
+    CACHE STRING "" FORCE
+)
 
 if(@ct_debug_mode@)
     set(CMAKEPP_LANG_DEBUG_MODE "TRUE")
@@ -30,5 +34,5 @@ cpp_set_global("CT_DEBUG_MODE" "@ct_debug_mode@")
 include("cmake_test/cmake_test")
 set(CMAKEPP_LANG_DEBUG_MODE "@CMAKEPP_LANG_DEBUG_MODE@")
 
-include([[@_ad_test_file@]])
+include([[@_CT_LISTS_TEMPLATE_TEST_FILE@]])
 ct_exec_tests()
