Remove questions [no ci]

--- a/cmake/cmake_test/templates/test_CMakeLists.txt.in
+++ b/cmake/cmake_test/templates/test_CMakeLists.txt.in
@@ -24,8 +24,9 @@ set(CMAKE_MODULE_PATH
     CACHE STRING "" FORCE
 )
 
-# Question: Why not just set this to @ct_debug_mode@? I'm pretty sure that
-#           accomplishes the same thing.
+# Unconfirmed: This assignment is done in a seemily redundant way
+# because some CMakePPLang debug statements trigger just by
+# CMAKEPP_LANG_DEBUG_MODE being defined at all
 if(@ct_debug_mode@)
     set(CMAKEPP_LANG_DEBUG_MODE "TRUE")
 endif()
@@ -34,7 +35,6 @@ include(cmakepp_lang/cmakepp_lang)
 cpp_set_global("CT_DEBUG_MODE" "@ct_debug_mode@")
 
 include("cmake_test/cmake_test")
-# Question: Why is this set separately from above?
 set(CMAKEPP_LANG_DEBUG_MODE "@CMAKEPP_LANG_DEBUG_MODE@")
 
 include([[@_CT_CMAKELISTS_TEMPLATE_TEST_FILE@]])
